objects/pkgviz__About_Welcome_Mat_Step__mdt.object
<CustomObject>
    <fields>
        <fullName>pkgviz__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pkgviz__Icon__c</fullName>
        <label>Icon</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pkgviz__Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pkgviz__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pkgviz__Visibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visibility</label>
        <type>Checkbox</type>
    </fields>
    <label>About Welcome Mat Step</label>
    <pluralLabel>About Welcome Mat Steps</pluralLabel>
</CustomObject>